WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93848
[BlackBerry] Rounding error somewhere when translating CompositingLayer 's for in-region scrolling
https://bugs.webkit.org/show_bug.cgi?id=93848
Summary
[BlackBerry] Rounding error somewhere when translating CompositingLayer 's fo...
Antonio Gomes
Reported
2012-08-13 08:03:35 PDT
I can notice specially when zooming to the maximum and slowing pan the in-region scrollable block.
Attachments
patch
(11.49 KB, patch)
2012-08-13 09:00 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
patch v2
(13.06 KB, patch)
2012-08-13 11:42 PDT
,
Antonio Gomes
yong.li.webkit
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-08-13 09:00:34 PDT
Created
attachment 158012
[details]
patch
WebKit Review Bot
Comment 2
2012-08-13 09:03:31 PDT
Attachment 158012
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/InRegionScrol..." exit_code: 1 Source/WebKit/blackberry/Api/InRegionScroller.cpp:222: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yong Li
Comment 3
2012-08-13 09:22:44 PDT
Comment on
attachment 158012
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=158012&action=review
> Source/WebKit/blackberry/Api/InRegionScroller.cpp:65 > + // FIXME: Negative values won't work with map{To,From}Transform methods.
map{To,From}Transform. a space?
> Source/WebKit/blackberry/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > +
missing description here?
Antonio Gomes
Comment 4
2012-08-13 09:40:57 PDT
Comment on
attachment 158012
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=158012&action=review
>> Source/WebKit/blackberry/ChangeLog:8 >> + > > missing description here?
I added description per-method below. Is that enough?
Antonio Gomes
Comment 5
2012-08-13 11:10:41 PDT
Comment on
attachment 158012
[details]
patch modified version coming,..
Antonio Gomes
Comment 6
2012-08-13 11:42:37 PDT
Created
attachment 158061
[details]
patch v2 Patch caches a LayerWebKitThread as the camouflaged object, intead of a RenderLayer. In a follow up patch that will get RefPtr'ed but can not happen quite yet 'cause that needs some refactoring first. On it next
Antonio Gomes
Comment 7
2012-08-13 12:26:29 PDT
Committed
http://trac.webkit.org/changeset/125434
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug