Source/WebKit/blackberry/Api/InRegionScroller.cpp
@@ -26,9 +26,11 @@
 #include "InRegionScrollableArea.h"
 #include "InRegionScroller_p.h"
 #include "LayerCompositingThread.h"
+#include "LayerWebKitThread.h"
 #include "Page.h"
 #include "RenderBox.h"
 #include "RenderLayer.h"
+#include "RenderLayerBacking.h"
 #include "RenderObject.h"
 #include "RenderView.h"
 #include "WebPage_p.h"
@@ -56,10 +58,20 @@ InRegionScroller::~InRegionScroller()
     delete d;
 }
 
-bool InRegionScroller::compositedSetScrollPosition(unsigned camouflagedLayer, const Platform::IntPoint& scrollPosition)
+bool InRegionScroller::setScrollPositionCompositingThread(unsigned camouflagedLayer, const Platform::IntPoint& scrollPosition)
 {
     ASSERT(Platform::userInterfaceThreadMessageClient()->isCurrentThread());
-    return d->compositedSetScrollPosition(camouflagedLayer, d->m_webPage->mapFromTransformed(scrollPosition));
+
+    // FIXME: Negative values won't work with map{To,From}Transform methods.
+    return d->setScrollPositionCompositingThread(camouflagedLayer, d->m_webPage->mapFromTransformed(scrollPosition));
+}
+
+bool InRegionScroller::setScrollPositionWebKitThread(unsigned camouflagedLayer, const Platform::IntPoint& scrollPosition)
+{
+    ASSERT(Platform::webKitThreadMessageClient()->isCurrentThread());
+
+    // FIXME: Negative values won't work with map{To,From}Transform methods.
+    return d->setScrollPositionWebKitThread(camouflagedLayer, d->m_webPage->mapFromTransformed(scrollPosition));
 }
 
 InRegionScrollerPrivate::InRegionScrollerPrivate(WebPagePrivate* webPagePrivate)
@@ -92,13 +104,33 @@ bool InRegionScrollerPrivate::canScroll() const
     return hasNode();
 }
 
-bool InRegionScrollerPrivate::compositedSetScrollPosition(unsigned camouflagedLayer, const WebCore::IntPoint& scrollPosition)
+bool InRegionScrollerPrivate::setScrollPositionCompositingThread(unsigned camouflagedLayer, const WebCore::IntPoint& scrollPosition)
 {
-    LayerCompositingThread* scrollLayer = reinterpret_cast<LayerCompositingThread*>(camouflagedLayer);
-    scrollLayer->override()->setBoundsOrigin(WebCore::FloatPoint(scrollPosition.x(), scrollPosition.y()));
+    LayerCompositingThread* scrollLayer = reinterpret_cast<LayerWebKitThread*>(camouflagedLayer)->layerCompositingThread();
 
+    // FIXME: Clamp maximum and minimum scroll positions as a last attempt to fix round errors.
+    scrollLayer->override()->setBoundsOrigin(scrollPosition);
     m_webPage->scheduleCompositingRun();
     return true;
+}
+
+bool InRegionScrollerPrivate::setScrollPositionWebKitThread(unsigned camouflagedLayer, const WebCore::IntPoint& scrollPosition)
+{
+    RenderLayer* layer = 0;
+
+    LayerWebKitThread* layerWebKitThread = reinterpret_cast<LayerWebKitThread*>(camouflagedLayer);
+    ASSERT(layerWebKitThread);
+    if (layerWebKitThread->owner()) {
+        GraphicsLayer* graphicsLayer = layerWebKitThread->owner();
+        RenderLayerBacking* backing = static_cast<RenderLayerBacking*>(graphicsLayer->client());
+        layer = backing->owningLayer();
+    }
+
+    if (!layer)
+        return false;
+
+    // FIXME: Clamp maximum and minimum scroll positions as a last attempt to fix round errors.
+    return setLayerScrollPosition(layer, scrollPosition);
 }
 
 bool InRegionScrollerPrivate::scrollBy(const Platform::IntSize& delta)
@@ -190,6 +222,29 @@ std::vector<Platform::ScrollViewBase*> InRegionScrollerPrivate::inRegionScrollab
     }
 
     return validReturn;
+}
+
+bool InRegionScrollerPrivate::setLayerScrollPosition(RenderLayer* layer, const IntPoint& scrollPosition)
+{
+    RenderObject* layerRenderer = layer->renderer();
+    ASSERT(layerRenderer);
+
+    if (layerRenderer->isRenderView()) { // #document case.
+        FrameView* view = toRenderView(layerRenderer)->frameView();
+        ASSERT(view);
+
+        Frame* frame = view->frame();
+        ASSERT_UNUSED(frame, frame);
+
+        view->setScrollPosition(scrollPosition);
+        return true;
+    }
+
+    // RenderBox-based elements case (scrollable boxes (div's, p's, textarea's, etc)).
+    layer->scrollToOffset(scrollPosition.x(), scrollPosition.y());
+    // FIXME_agomes: Please recheck if it is needed still!
+    layer->renderer()->repaint(true);
+    return true;
 }
 
 bool InRegionScrollerPrivate::scrollNodeRecursively(WebCore::Node* node, const WebCore::IntSize& delta)
