Source/WebKit/blackberry/WebKitSupport/InRegionScrollableArea.cpp
@@ -20,7 +20,6 @@
 #include "InRegionScrollableArea.h"
 
 #include "Frame.h"
-#include "LayerCompositingThread.h"
 #include "LayerWebKitThread.h"
 #include "RenderBox.h"
 #include "RenderLayer.h"
@@ -90,7 +89,7 @@ InRegionScrollableArea::InRegionScrollableArea(WebPagePrivate* webPage, RenderLa
         if (m_layer->usesCompositedScrolling()) {
             m_supportsCompositedScrolling = true;
             ASSERT(m_layer->backing()->hasScrollingLayer());
-            m_cachedCompositedScrollableLayer = reinterpret_cast<unsigned>(m_layer->backing()->scrollingLayer()->platformLayer()->layerCompositingThread());
+            m_cachedCompositedScrollableLayer = reinterpret_cast<unsigned>(m_layer->backing()->scrollingLayer()->platformLayer());
         }
 
         m_overscrollLimitFactor = 0.0;
